spell check on main page

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
         </div>
         <div class="project-card-content">
           <div class="project-description">
-            <p class="tagline"> "How might we create a annonymous community to discuss mental health issues at Dartmouth?"  </p>
-            <p>Unmasked is a mobile application that allows students to annonymously
+            <p class="tagline"> "How might we create a anonymous community to discuss mental health issues at Dartmouth?"  </p>
+            <p>Unmasked is a mobile application that allows students to anonymously
               discuss mental health and other personal issues.</p>
               <div class="see-more-button" id="unmasked">
               <p class="project-link-text">See more</p>
