--- a/pages/lor.html
+++ b/pages/lor.html
@@ -26,7 +26,7 @@
     <div class="page-header-content">
       <h1 class="page-title">LEFT ON READ</h1>
       <h2 class="page-role"> Lead Designer | Front-End Developer</h2>
-      <h3 class="page-tagline"> Analyze your texts. Learn who your friends area. See your texting habits. </h3>
+      <h3 class="page-tagline"> Analyze your texts. Learn who your friends are. See your texting habits. </h3>
 
       <div id="button">
         <a id="resume-link" href="http://leftonread.me" target="_blank">
