--- a/pages/unmasked.html
+++ b/pages/unmasked.html
@@ -26,7 +26,7 @@
       <h1 class="page-title">UNMASKED</h1>
       <h2 class="page-role">UI/UX DESIGNER</h2>
       <h2 class="page-team">with Dorothy Qu and Eric Wang</h2>
-      <h3 class="page-tagline">How might we create a anonymous community to discuss mental health issues at Dartmouth?</h3>
+      <h3 class="page-tagline">How might we create an anonymous community to discuss mental health issues at Dartmouth?</h3>
     </div>
 
     <div id="button">
