--- a/pages/unmasked.html
+++ b/pages/unmasked.html
@@ -221,9 +221,9 @@
 
     </div>
 
-    <p class="page-normal-text"> We felt that this system we created provided the best of both world. Since each initial comment usually
+    <p class="page-normal-text"> We felt that this hybrid system provided the best of both worlds. Since each initial comment usually
       responds to the original post in a new direction, we thought that these would be great 'conversation
-      starters'. Responses and comments in these sub-conversations would be grouped together to keep
+      starters.'' Responses and comments in these sub-conversations would be grouped together to keep
       the discussion organized, while allowing new contributors to equally add to the conversation. Therefore,
       the comment section would encourage discussion while still maintaining some level of organization.
     </p>
@@ -242,7 +242,7 @@
       As a result, we looked into how platforms like Yik Yak created user identifies through avatars without breaking anonymity.
       We came across Identicons, random shapes generated using a hash function from any string of characters.
       We believed that these identicons could help users connect with each other without clearly labeling a user as a certain avatar.
-      The shapes offered just enough abstraction to help users blend in the crowd for normal users, but also help distinguish users
+      The shapes offered just enough abstraction to help users blend into the crowd for post and comment interactions, but also help distinguish users
       during direct messages. Specifically, we wanted to use the JDenticon library, as shown above.
     </p>
 
