--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
     <div class="bio-text">
       <h1 id="bio-intro">JUSTIN LUO</h1>
       <h2 id="bio-description">DESIGNER | DEVELOPER</h2>
-      <p id="bio-text">I am fascinated by the intersection between design and technology. By creating intuitive and beautiful
-        solutions, I aim to create delightful user experiences.</p>
+        <p id="bio-text">
+          As a  self-taught <span id="bio-bold">UX Designer</span> with a <span id="bio-bold">strong developer background</span>, I'm proud of my flexible skillset and am willing to contribute
+          wherever a project most needs me. </p>
+          <p id="bio-text">
+          I'm a team player focused on
+           <span id="bio-bold">empowering</span> those alongside me, and I champion <span id="bio-bold">collaboration and empathy</span> throughout my projects.</p>
       <div id="resume-button">
         <a id="resume-link" href="./pages/Justin-Luo-Resume.pdf" target="_blank">
           <p id="see-resume">See Resume</p>
@@ -100,10 +104,9 @@
         <img id="about-outdoor" src="./img/outdoor.png" alt="outdoor">
       </div>
       <div id="about-text">
-        <p>Born and raised in Wisconsin, I have now continued my studies at Dartmouth College. At Dartmouth,
-          I am a Computer Science Major and Human-Centered Design Minor.</p>
-        <p>On campus, I’m involved in Sigma Phi Epsilon, DALI Lab, and the Cabin and Trail club. In my free
-          time, I love to go hike, rock climb, and play tennis.</p>
+        <p>Hi! I'm a rising senior at Dartmouth College, studying Computer Science and Human Centered Design.</p>
+        <p>Design intern at Microsoft and Mastercard (APT). </p>
+        <p>Interests in AR and VR, Interaction and Product Design, Game Development, 3D Modeling, Animation and Film.</p>
       </div>
     </div>
   </div>
@@ -115,6 +118,41 @@
   </div>
 
   <div class="projects-background">
+
+    <!-- ColorPeace -->
+
+    <div class="project-wrapper" >
+    <a class="project-link" href="https://docs.google.com/presentation/d/1Xo9Dlq7X2pnlKelPMDQ74wgLxAg4Vxzq71fOI-EO4Xw/edit#slide=id.g5895e2335c_0_786" target="_blank">
+      <div class="large-project-card">
+        <div class="project-card-header">
+          <div class="project-name">
+            <h2 class="project-title">ColorPeace</h2>
+            <h3 class="project-role">Designer | Developer</h3>
+          </div>
+          <div class="project-keys">
+            <ul class="keys-list">
+              <li class="key" id="product">VIRTUAL REALITY</li>
+              <li class="key" id="react">UNITY</li>
+              <li class="key" id="illustrator">MAYA</li>
+            </ul>
+          </div>
+        </div>
+        <div class="project-card-content">
+          <div class="project-description">
+            <p class="tagline"> Coloring therapy...in virtual reality! </p>
+            <p>Studies have shown that coloring therapy can be an effective way to decrease stress.
+            Could the immersive qualities of VR augment those effects?</p>
+              <div class="see-more-button" id="colorpeace">
+              <p class="project-link-text">See more</p>
+            </div>
+        </div>
+          <div class="project-photo">
+            <img class="project-img" src="./img/colorpeace-thumb.png" />
+          </div>
+        </div>
+      </div>
+    </a>
+    </div>
 
     <!-- Unmasked -->
 
@@ -129,7 +167,6 @@
           <div class="project-keys">
             <ul class="keys-list">
               <li class="key" id="ux">UI/UX</li>
-              <li class="key" id="illustrator">ILLUSTRATOR</li>
               <li class="key" id="sketch-figma">SKETCH</li>
             </ul>
           </div>
