--- a/pages/colorpeace.html
+++ b/pages/colorpeace.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="../css/project.css">
   <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
 
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,600|Lato:300,400|Permanent+Marker"
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,600|Lato:300,400,600|Permanent+Marker"
     rel="stylesheet">
   <script src="https://use.fontawesome.com/f1cdcabfb0.js"></script>
 </head>
@@ -19,22 +19,20 @@
 
   <!-- Header -->
   <div class="page-header">
-
     <div class="page-back-container">
       <a class="page-back" href="../index.html"> <i class="fa fa-arrow-left" aria-hidden="true"></i> &nbsp; Back to home </a>
     </div>
     <div class="page-header-content">
-      <h1 class="page-title">LEFT ON READ</h1>
-      <h2 class="page-role"> Lead Designer | Front-End Developer</h2>
-      <h3 class="page-tagline"> Analyze your texts. Learn who your friends area. See your texting habits. </h3>
+      <h1 class="page-title">COLORPEACE</h1>
+      <h2 class="page-role">DESIGNER | DEVELOPER</h2>
+      <h2 class="page-team">with Sia Peng</h2>
+      <h3 class="page-tagline">Coloring therapy...in virtual reality!</h3>
+    </div>
 
-      <div id="button">
-        <a id="resume-link" href="http://leftonread.me" target="_blank">
-          <p id="see-resume">See the website</p>
-        </a>
-      </div>
-
-
+    <div id="button">
+      <a id="resume-link" href="https://docs.google.com/presentation/d/1Xo9Dlq7X2pnlKelPMDQ74wgLxAg4Vxzq71fOI-EO4Xw/edit?usp=sharing" target="_blank">
+        <p id="see-resume">See the deck</p>
+      </a>
     </div>
   </div>
 
