--- a/index.html
+++ b/index.html
@@ -104,9 +104,10 @@
         <img id="about-outdoor" src="./img/outdoor.png" alt="outdoor">
       </div>
       <div id="about-text">
-        <p>Hi! I'm a rising senior at Dartmouth College, studying Computer Science and Human Centered Design.</p>
-        <p>Design intern at Microsoft and Mastercard (APT). </p>
-        <p>Interests in AR and VR, Interaction and Product Design, Game Development, 3D Modeling, Animation and Film.</p>
+        <p>I'm a rising senior at Dartmouth College, studying Computer Science and Human Centered Design.</p>
+        <p>Design intern at <span><img id="microsoft-logo" src="./img/microsoft-logo.jpg"></span> and
+          <span><img id="mastercard-logo" src="./img/mastercard-logo.png"></span></p>
+        <p>Interests in AR and VR, Interaction and Product Design, Game Development, 3D Modeling, Animation and Film</p>
       </div>
     </div>
   </div>
