--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <div class="project-description">
             <p class="tagline"> Coloring therapy...in virtual reality! </p>
             <p>Studies have shown that coloring therapy can be an effective way to decrease stress.
-            Could the immersive qualities of VR augment those effects?</p>
+            How might the immersive qualities of VR augment these effects?</p>
               <div class="see-more-button" id="colorpeace">
               <p class="project-link-text">See more</p>
             </div>
