apparently i can't use the word champion because i'm not bill gates

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           wherever a project most needs me. </p>
           <p id="bio-text">
           I'm a team player focused on
-           <span id="bio-bold">empowering</span> those alongside me, and I champion <span id="bio-bold">collaboration and empathy</span> throughout my projects.</p>
+           <span id="bio-bold">empowering</span> those alongside me, and I promote <span id="bio-bold">collaboration and empathy</span> throughout my projects.</p>
       <div id="resume-button">
         <a id="resume-link" href="./pages/Justin-Luo-Resume.pdf" target="_blank">
           <p id="see-resume">See Resume</p>
