--- a/index.html
+++ b/index.html
@@ -31,14 +31,12 @@
           <a id="about" class="navbar-heading">ABOUT</a>
         </li>
         <li class="navbar-item dropdown">
-          <div class="dropdown-area">
-          </div>
           <div class="dropdown-content">
             <a id="xr" class="dropdown-link navbar-heading" href="#">AR, VR, AND MR</a>
             <a id="mob_web" class="dropdown-link navbar-heading" href="#">MOBILE AND WEB</a>
             <a id="misc" class="dropdown-link navbar-heading" href="#">MISCELLANEOUS</a>
           </div>
-          <span id="dropdown-btn" class="navbar-heading">PORTFOLIO &#8239; <i class="fa fa-caret-down"></i></span>
+          <span id="dropdown-btn" class="navbar-heading">PORTFOLIO <i class="fa fa-caret-down"></i></span>
         </li>
         <li class="navbar-item">
           <a id="adventure" class="navbar-heading">ADVENTURES</a>
@@ -118,6 +116,19 @@
         <p>Interests in AR and VR, Interaction and Product Design, Game Development, 3D Modeling, Animation and Film</p>
       </div>
     </div>
+  </div>
+
+<!-- Side bar -->
+  <div class="side-bar" id="side-bar">
+    <a id="main-logo-sidebar" class="navbar-heading" cursor="pointer">
+      <img id="nav-logo" src="./img/logo.png" alt="logo">
+      </a>
+   <a id="about-side" class="navbar-heading" href="#">ABOUT</a>
+    <a id="portfolio-side" class="portfolio">PORTFOLIO</a>
+    <a id="xr-side" class="navbar-heading sub-heading" href="#">AR, VR, AND MR</a>
+    <a id="mob_web-side" class="navbar-heading sub-heading" href="#">MOBILE AND WEB</a>
+    <a id="misc-side" class="navbar-heading sub-heading" href="#">MISCELLANEOUS</a>
+    <a id="adventure-side" class="navbar-heading" href="#">ADVENTURES</a>
   </div>
 
 
