--- a/index.html
+++ b/index.html
@@ -1071,8 +1071,11 @@
     crossorigin="anonymous"></script>
   <script src="./js/bootstrap.js"></script>
   <script type="text/javascript" src="./js/main.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-</div>
+  <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
+  </div>
 
 <div>
   <h1 class="footer">Designed and created by Justin Luo. All rights reserved.</h1>
