--- a/index.html
+++ b/index.html
@@ -59,41 +59,39 @@
           <p id="bio-text">
           I'm a team player focused on
            <span id="bio-bold">empowering</span> those alongside me, and I promote <span id="bio-bold">collaboration and empathy</span> throughout my projects.</p>
-      <div id="resume-button">
-        <a id="resume-link" href="./pages/Justin-Luo-Resume.pdf" target="_blank">
-          <p id="see-resume">See Resume</p>
-        </a>
-      </div>
+
+
+
+          <div class="contact-wrapper">
+            <div id="resume-button">
+              <a id="resume-link" href="./pages/Justin-Luo-Resume.pdf" target="_blank">
+                <p id="see-resume">See Resume</p>
+              </a>
+            </div>
+            <div id="links">
+            <div class="contact-link">
+              <a class="contact-icon" href="mailto:justinluo973@gmail.com">
+                  <i class="fa fa-envelope" aria-hidden="true"></i>
+                </a>
+            </div>
+
+            <div class="contact-link">
+              <a class="contact-icon" target="_blank" href="https://www.linkedin.com/in/justin-luo-75a12012a/">
+                  <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                </a>
+            </div>
+            <div class="contact-link">
+              <a class="contact-icon" target="_blank" href="https://github.com/Justin-Luo">
+                  <i class="fa fa-github-square" aria-hidden="true"></i>
+                </a>
+            </div>
+          </div>
+          </div>
+          </div>
+        </div>
     </div>
 
 
-    <div class="contact-wrapper">
-      <div class="contact-link">
-        <a class="contact-icon" href="mailto:justinluo973@gmail.com">
-            <i class="fa fa-envelope" aria-hidden="true"></i>
-          </a>
-      </div>
-      <!-- <div class="contact-link">
-          <a class="contact-icon" href="mailto:justinluo973@gmail.com">
-            <i class="fa fa-phone" aria-hidden="true"></i>
-          </a>
-        </div> -->
-      <div class="contact-link">
-        <a class="contact-icon" target="_blank" href="https://www.linkedin.com/in/justin-luo-75a12012a/">
-            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-          </a>
-      </div>
-      <div class="contact-link">
-        <a class="contact-icon" target="_blank" href="https://github.com/Justin-Luo">
-            <i class="fa fa-github-square" aria-hidden="true"></i>
-          </a>
-      </div>
-    </div>
-    <!-- <div class="bio-pic">
-        <img id="justin-pic" src="./img/justin.jpg" alt="justin">
-      </div> -->
-    </div>
-  </div>
 
   <div class="body-wrapper">
 
@@ -288,7 +286,7 @@
             </div>
         </div>
           <div class="project-photo">
-            <img class="project-img" src="./img/unmasked-icon.png" />
+            <img class="project-img" src="./img/unmasked-logo.png" />
           </div>
         </div>
       </div>
