--- a/pages/unmasked.html
+++ b/pages/unmasked.html
@@ -34,6 +34,7 @@
         <p id="see-resume">See the prototype</p>
       </a>
     </div>
+
   </div>
 
 
@@ -392,6 +393,8 @@
       ideate phases. Without our time and effort in these stages, we would have overlooked several aspects
       of our user experience and not considered how potential features could negatively affect the main
       purpose of the application.</p>
+
+      <p class="page-normal-text "> <b>UPDATE:</b> Unmasked released for the public in October 2019! See it in the App Store <a href="https://apps.apple.com/us/app/unmasked-project/id1439705803" style="color:#616161;" target="_blank">here</a>. </p>
 
       <div class="next-links-container">
           <a class="next-link" href="../index.html">
