--- a/index.html
+++ b/index.html
@@ -48,7 +48,54 @@
 
 
   <!-- Bio -->
+
   <div class="bio-box">
+    <div class="bio-box-wrapper">
+    <div class="bio-text">
+      <h1 id="bio-intro">JUSTIN LUO</h1>
+      <h2 id="bio-description">DESIGNER | DEVELOPER</h2>
+        <p id="bio-text">
+          As a  self-taught <span id="bio-bold">UX Designer</span> with a <span id="bio-bold">strong developer background</span>, I'm proud of my flexible skillset and am willing to contribute
+          wherever a project most needs me. </p>
+          <p id="bio-text">
+          I'm a team player focused on
+           <span id="bio-bold">empowering</span> those alongside me, and I promote <span id="bio-bold">collaboration and empathy</span> throughout my projects.</p>
+      <div id="resume-button">
+        <a id="resume-link" href="./pages/Justin-Luo-Resume.pdf" target="_blank">
+          <p id="see-resume">See Resume</p>
+        </a>
+      </div>
+    </div>
+
+
+    <div class="contact-wrapper">
+      <div class="contact-link">
+        <a class="contact-icon" href="mailto:justinluo973@gmail.com">
+            <i class="fa fa-envelope" aria-hidden="true"></i>
+          </a>
+      </div>
+      <!-- <div class="contact-link">
+          <a class="contact-icon" href="mailto:justinluo973@gmail.com">
+            <i class="fa fa-phone" aria-hidden="true"></i>
+          </a>
+        </div> -->
+      <div class="contact-link">
+        <a class="contact-icon" target="_blank" href="https://www.linkedin.com/in/justin-luo-75a12012a/">
+            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+          </a>
+      </div>
+      <div class="contact-link">
+        <a class="contact-icon" target="_blank" href="https://github.com/Justin-Luo">
+            <i class="fa fa-github-square" aria-hidden="true"></i>
+          </a>
+      </div>
+    </div>
+    <!-- <div class="bio-pic">
+        <img id="justin-pic" src="./img/justin.jpg" alt="justin">
+      </div> -->
+    </div>
+  </div>
+  <!-- <div class="bio-box">
     <div class="bio-box-wrapper">
     <div class="bio-text">
       <h1 id="bio-intro">JUSTIN LUO</h1>
@@ -87,9 +134,10 @@
             </div>
           </div>
           </div>
-          </div>
-        </div>
-    </div>
+          </div> -->
+          <!-- <img style="position: absolute; top: -150px; right: 20px; width: 600px; opacity: 0.5;" src="./img/big-logo.png" /> -->
+        <!-- </div>
+    </div> -->
 
 
 
