--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <a id="main-logo-sidebar" class="navbar-heading" cursor="pointer">
       <img id="nav-logo" src="./img/logo.png" alt="logo">
       </a>
-   <a id="about-side" class="navbar-heading" href="#">ABOUT</a>
+    <a class="navbar-heading" href="./pages/Justin-Luo-Resume.pdf" target="_blank">RESUME</a>
     <a id="portfolio-side" class="portfolio">PORTFOLIO</a>
     <a id="xr-side" class="navbar-heading sub-heading" href="#">AR, VR, AND MR</a>
     <a id="mob_web-side" class="navbar-heading sub-heading" href="#">MOBILE AND WEB</a>
