--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <div class="other-projects">
 
 
-      <div class="small-project-card" style="background-image: url(./img/hololens.png)" data-micromodal-trigger="hololens-modal">
+      <div id="hololens" class="small-project-card" style="background-image: url(./img/hololens.png)" data-micromodal-trigger="hololens-modal">
         <div class="background-overlay">
         </div>
         <div class="small-text-wrapper">
@@ -268,7 +268,7 @@
         </div>
       </div>
 
-      <div class="small-project-card" style="background-image: url(./img/gardenvr.png)" data-micromodal-trigger="garden-modal">
+      <div id="garden" class="small-project-card" style="background-image: url(./img/gardenvr.png)" data-micromodal-trigger="garden-modal">
         <div class="background-overlay">
         </div>
         <div class="small-text-wrapper">
@@ -286,7 +286,7 @@
       </div>
 
 
-      <div class="small-project-card" style="background-image: url(./img/ffb3d.png)" data-micromodal-trigger="ffb-modal">
+      <div id="ffb" class="small-project-card" style="background-image: url(./img/ffb3d.png)" data-micromodal-trigger="ffb-modal">
         <div class="background-overlay">
         </div>
         <div class="small-text-wrapper">
@@ -303,7 +303,7 @@
         </div>
       </div>
 
-      <div class="small-project-card" style="background-image: url(./img/crunch-logo.png)" data-micromodal-trigger="crunch-modal">
+      <div id="crunch" class="small-project-card" style="background-image: url(./img/crunch-logo.png)" data-micromodal-trigger="crunch-modal">
         <div class="background-overlay">
         </div>
         <div class="small-text-wrapper">
@@ -400,7 +400,7 @@
 
     <div class="other-projects">
 
-      <div class="small-project-card" style="background-image: url(./img/teams-logo.jpeg)" data-micromodal-trigger="teams-modal">
+      <div id="msft-teams" class="small-project-card" style="background-image: url(./img/teams-logo.jpeg)" data-micromodal-trigger="teams-modal">
         <div class="background-overlay">
         </div>
         <div class="small-text-wrapper">
@@ -416,7 +416,7 @@
         </div>
       </div>
 
-      <div class="small-project-card" style="background-image: url(./img/making-logo.png)" data-micromodal-trigger="making-modal">
+      <div id="making-it-stick" class="small-project-card" style="background-image: url(./img/making-logo.png)" data-micromodal-trigger="making-modal">
         <div class="background-overlay">
         </div>
         <div class="small-text-wrapper">
