--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 
     <div class="other-projects">
 
-      <div class="small-project-card" style="background-image: url(./img/stic-logo.png)" data-micromodal-trigger="stic-modal" >
+      <div id="stic" class="small-project-card" style="background-image: url(./img/stic-logo.png)" data-micromodal-trigger="stic-modal" >
         <div class="background-overlay">
         </div>
         <div class="small-text-wrapper">
@@ -502,7 +502,7 @@
       </div>
 
 
-      <div class="small-project-card" style="background-image: url(./img/handoutpocket-logo.png)" data-micromodal-trigger="handout-modal">
+      <div id="handout-pocket" class="small-project-card" style="background-image: url(./img/handoutpocket-logo.png)" data-micromodal-trigger="handout-modal">
         <div class="background-overlay">
         </div>
         <div class="small-text-wrapper">
