--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <a id="main-logo-sidebar" class="navbar-heading" cursor="pointer">
       <img id="nav-logo" src="./img/logo.png" alt="logo">
       </a>
-    <a class="navbar-heading" href="./pages/Justin-Luo-Resume.pdf" target="_blank">RESUME</a>
+    <a class="navbar-heading" id="resume-side" href="./pages/Justin-Luo-Resume.pdf" target="_blank">RESUME</a>
     <a id="portfolio-side" class="portfolio">PORTFOLIO</a>
     <a id="xr-side" class="navbar-heading sub-heading" href="#">AR, VR, AND MR</a>
     <a id="mob_web-side" class="navbar-heading sub-heading" href="#">MOBILE AND WEB</a>
