large-project clicks

--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
 
     <!-- ColorPeace -->
 
-    <div class="project-wrapper" >
-    <a class="project-link" href="https://docs.google.com/presentation/d/1Xo9Dlq7X2pnlKelPMDQ74wgLxAg4Vxzq71fOI-EO4Xw/edit#slide=id.g5895e2335c_0_786" target="_blank">
+    <div id="colorpeace-proj" class="project-wrapper" >
+    <a id="colorpeace-proj" class="project-link" href="https://docs.google.com/presentation/d/1Xo9Dlq7X2pnlKelPMDQ74wgLxAg4Vxzq71fOI-EO4Xw/edit#slide=id.g5895e2335c_0_786" target="_blank">
       <div class="large-project-card">
         <div class="project-card-header">
           <div class="project-name">
@@ -332,8 +332,8 @@
 
     <!-- Unmasked -->
 
-    <div class="project-wrapper" >
-    <a class="project-link" href="./pages/unmasked.html">
+    <div id="unmasked-proj" class="project-wrapper" >
+    <a id="unmasked-proj" class="project-link" href="./pages/unmasked.html">
       <div class="large-project-card">
         <div class="project-card-header">
           <div class="project-name">
@@ -366,8 +366,8 @@
 
     <!-- Left on Read -->
 
-    <div class="project-wrapper" >
-    <a class="project-link" href="./pages/lor.html">
+    <div id="lor-proj" class="project-wrapper" >
+    <a id="lor-proj" class="project-link" href="./pages/lor.html">
       <div class="large-project-card">
         <div class="project-card-header">
           <div class="project-name">
