--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 
     <div class="other-projects">
 
-      <div id="stic" class="small-project-card" style="background-image: url(./img/stic-logo.png)" data-micromodal-trigger="stic-modal" >
+      <div id="stic-proj" class="small-project-card" style="background-image: url(./img/stic-logo.png)" data-micromodal-trigger="stic-modal" >
         <div class="background-overlay">
         </div>
         <div class="small-text-wrapper">
