updated large project cards

--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 
     <div id="colorpeace-proj" class="project-wrapper" >
     <a id="colorpeace-proj" class="project-link" href="https://docs.google.com/presentation/d/1Xo9Dlq7X2pnlKelPMDQ74wgLxAg4Vxzq71fOI-EO4Xw/edit#slide=id.g5895e2335c_0_786" target="_blank">
-      <div class="large-project-card">
-        <div class="project-card-header">
+      <div class="large-project-card" id="colorpeace-large">
+        <!-- <div class="project-card-header">
           <div class="project-name">
             <h2 class="project-title">ColorPeace</h2>
             <h3 class="project-role">Designer | Developer</h3>
@@ -243,7 +243,7 @@
           <div class="project-photo">
             <img class="project-img" src="./img/colorpeace-thumb.png" />
           </div>
-        </div>
+        </div> -->
       </div>
     </a>
     </div>
@@ -334,8 +334,8 @@
 
     <div id="unmasked-proj" class="project-wrapper" >
     <a id="unmasked-proj" class="project-link" href="./pages/unmasked.html">
-      <div class="large-project-card">
-        <div class="project-card-header">
+      <div class="large-project-card" id="unmasked-large">
+        <!-- <div class="project-card-header">
           <div class="project-name">
             <h2 class="project-title">Unmasked</h2>
             <h3 class="project-role">UI/UX Designer</h3>
@@ -359,7 +359,7 @@
           <div class="project-photo">
             <img class="project-img" src="./img/unmasked-logo.png" />
           </div>
-        </div>
+        </div> -->
       </div>
     </a>
     </div>
@@ -368,8 +368,8 @@
 
     <div id="lor-proj" class="project-wrapper" >
     <a id="lor-proj" class="project-link" href="./pages/lor.html">
-      <div class="large-project-card">
-        <div class="project-card-header">
+      <div class="large-project-card" id="lor-large">
+        <!-- <div class="project-card-header">
           <div class="project-name">
             <h2 class="project-title">Left On Read</h2>
             <h3 class="project-role">Lead Designer | Front-End Developer</h3>
@@ -393,7 +393,7 @@
           <div class="project-photo">
             <img class="project-img" src="./img/lor-logo.png" />
           </div>
-        </div>
+        </div> -->
       </div>
     </a>
     </div>
