--- a/pages/unmasked.html
+++ b/pages/unmasked.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Justin Luo</title>
+  <title>Unmasked | Justin Luo | Portfolio</title>
 
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
