fixed personal statement

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
       <h1 id="bio-intro">JUSTIN LUO</h1>
       <h2 id="bio-description">DESIGNER | DEVELOPER</h2>
         <p id="bio-text">
-          As a  self-taught <span id="bio-bold">UX Designer</span> with a <span id="bio-bold">strong developer background</span>, I'm proud of my flexible skillset and am willing to contribute
+          As a  self-taught <span id="bio-bold">UX designer</span> with a <span id="bio-bold">strong developer background</span>, I'm proud of my flexible skillset and am willing to contribute
           wherever a project most needs me. </p>
           <p id="bio-text">
-          I'm a team player focused on
+          I'm a motivated team player focused on
            <span id="bio-bold">empowering</span> those alongside me, and I promote <span id="bio-bold">collaboration and empathy</span> throughout my projects.</p>
       <div id="resume-button">
         <a id="resume-link" href="./pages/Justin-Luo-Resume.pdf" target="_blank">
