--- a/index.html
+++ b/index.html
@@ -51,15 +51,18 @@
             </a>
         </li>
         <li class="navbar-item">
-          <a id="about" class="navbar-heading">ABOUT</a>
+          <a class="navbar-heading" id="resume-side" href="./pages/Justin-Luo-Resume.pdf" target="_blank">RESUME</a>
         </li>
-        <li class="navbar-item dropdown">
+        <li class="navbar-item">
+          <a id="portfolio" class="navbar-heading">PORTFOLIO</a>
+        </li>
+        <!-- <li class="navbar-item dropdown">
           <div class="dropdown-content">
             <a id="xr" class="dropdown-link navbar-heading" href="#">RESEARCH</a>
             <a id="mob_web" class="dropdown-link navbar-heading" href="#">PROJECTS</a>
           </div>
           <span id="dropdown-btn" class="navbar-heading">PORTFOLIO <i class="fa fa-caret-down"></i></span>
-        </li>
+        </li> -->
         <li class="navbar-item">
           <a id="adventure" class="navbar-heading">ADVENTURES</a>
         </li>
@@ -151,36 +154,49 @@
       <img id="nav-logo" src="./img/logo.png" alt="logo">
       </a>
     <a class="navbar-heading" id="resume-side" href="./pages/Justin-Luo-Resume.pdf" target="_blank">RESUME</a>
-    <a id="portfolio-side" class="portfolio">PORTFOLIO</a>
-    <a id="xr-side" class="navbar-heading sub-heading" href="#">RESEARCH</a>
-    <a id="mob_web-side" class="navbar-heading sub-heading" href="#">PROJECTS</a>
+    <!-- <a id="research-side" class="navbar-heading" href="#">RESEARCH</a> -->
+    <a id="portfolio-side" class="navbar-heading" href="#">PORTFOLIO</a>
     <a id="adventure-side" class="navbar-heading" href="#">ADVENTURES</a>
   </div>
 
+  <!--
+  <div class="title-wrapper" id="research-section">
+    <h1 class="section-title">Research</h1>
+    <img class="section-number" src="./img/2.png" alt="2">
+  </div>
+  -->
 
   <div class="title-wrapper" id="portfolio-section">
     <h1 class="section-title">Portfolio</h1>
     <img class="section-number" src="./img/2.png" alt="2">
   </div>
 
+
   <div class="projects-background">
 
-    <div class="project-section" id="xr-section">
-      <h1 class="project-section-title">Research </h1>
-      <hr class="project-hr">
-    </div>
 
+    <!-- Microsoft Teams -->
 
-    <div class="project-section" id="mob_web-section">
-      <h1 class="project-section-title">Projects</h1>
-      <hr class="project-hr"<>
-    </div>
 
     <!-- Unmasked -->
 
     <div id="unmasked-proj" class="project-wrapper" >
     <a id="unmasked-proj" class="project-link" href="./pages/unmasked.html">
       <div class="large-project-card" id="unmasked-large">
+      </div>
+    </a>
+    </div>
+
+    <!-- Digital Hallways -->
+
+    
+
+
+    <!-- ColorPeace-->
+
+    <div id="colorpeace-proj" class="project-wrapper" >
+    <a id="colorpeace-proj" class="project-link" href="https://docs.google.com/presentation/d/1Xo9Dlq7X2pnlKelPMDQ74wgLxAg4Vxzq71fOI-EO4Xw/edit#slide=id.g5895e2335c_0_786" target="_blank">
+      <div class="large-project-card" id="colorpeace-large">
       </div>
     </a>
     </div>
@@ -194,14 +210,7 @@
     </a>
     </div>
 
-     <!-- ColorPeace-->
 
-    <div id="colorpeace-proj" class="project-wrapper" >
-      <a id="colorpeace-proj" class="project-link" href="https://docs.google.com/presentation/d/1Xo9Dlq7X2pnlKelPMDQ74wgLxAg4Vxzq71fOI-EO4Xw/edit#slide=id.g5895e2335c_0_786" target="_blank">
-        <div class="large-project-card" id="colorpeace-large">
-        </div>
-      </a>
-      </div>
 
 
 
@@ -209,7 +218,7 @@
     <div id="adventure-section">
       <div class="title-wrapper">
         <h1 class="section-title">Adventures</h1>
-        <img class="section-number" src="./img/3.png" alt="4">
+        <img class="section-number" src="./img/3.png" alt="3">
       </div>
     </div>
   
@@ -357,7 +366,17 @@
       </div>
     </div>
     </div> -->
-  </div>
+
+  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/micromodal/dist/micromodal.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="./js/bootstrap.js"></script>
+  <script type="text/javascript" src="./js/main.js"></script>
+  <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
   </div>
 
 
