--- a/index.html
+++ b/index.html
@@ -74,25 +74,24 @@
 
 
   <!-- Bio -->
-
   <div class="bio-box">
     <div class="bio-box-wrapper">
     <div class="bio-text">
       <h1 id="bio-intro">JUSTIN LUO</h1>
       <h2 id="bio-description">DESIGNER | DEVELOPER</h2>
         <p id="bio-text">
-          As a  self-taught <span id="bio-bold">UX designer</span> with a <span id="bio-bold">strong developer background</span>, I'm proud of my flexible skillset and am willing to contribute
-          wherever a project most needs me. </p>
-          <p id="bio-text">
-          I'm a motivated team player focused on
-           <span id="bio-bold">empowering</span> those alongside me, and I promote <span id="bio-bold">collaboration and empathy</span> throughout my projects.</p>
+          As a <span id="bio-bold">UX designer</span> with a <span id="bio-bold">strong developer background</span>, I'm excited to find ways to innovate the way people work and learn.
+        </p>
+        <p id="bio-text">
+          Current: 
+           <span id="bio-bold">Designer</span> @ <span id="bio-bold">Microsoft Teams</span>
+        </p>
       <div id="resume-button">
         <a id="resume-link" href="./pages/Justin-Luo-Resume.pdf" target="_blank">
           <p id="see-resume">See Resume</p>
         </a>
       </div>
     </div>
-
 
     <div class="contact-wrapper">
       <div class="contact-link">
@@ -169,26 +168,26 @@
 
   <div class="body-wrapper">
 
-
   <!-- About Me -->
   <div id="about-section" class="title-wrapper">
     <h1 class="section-title">About Me</h1>
     <img class="section-number" src="./img/1.png" alt="1">
   </div>
-
   <div class="about-wrapper">
     <div class="about">
       <div id="about-image">
         <img id="about-outdoor" src="./img/outdoor.png" alt="outdoor">
       </div>
       <div id="about-text">
-        <p id="study-text">I'm a senior at Dartmouth College, studying Computer Science and Human Centered Design.</p>
-        <p id="experience-text">Design intern at <span><img id="microsoft-logo" src="./img/microsoft-logo.jpg"></span>and
-          <span><img id="mastercard-logo" src="./img/mastercard-logo.png"></span></p>
-        <p>Interests in AR and VR, Interaction and Product Design, Game Development, 3D Modeling, Animation and Film</p>
+        <p id="study-text">Studied Computer Science and Human-Centered Design at Dartmouth College</p>
+        <p>
+          I'm a motivated team player focused on
+           <span id="bio-bold">empowering</span> those alongside me, and I promote <span id="bio-bold">collaboration and empathy</span> throughout my projects.
+        </p>
       </div>
     </div>
   </div>
+
 
 <!-- Side bar -->
   <div class="side-bar" id="side-bar">
@@ -301,28 +300,8 @@
     </div>
 
 
-      <div id="making-it-stick" class="small-project-card" style="background-image: url(./img/making-logo.png)" data-micromodal-trigger="making-modal">
-        <div class="background-overlay">
-        </div>
-        <div class="small-text-wrapper">
 
-          <div class="small-text">
-            <h2 class="small-title">Making It Stick</h2>
-            <h2 class="small-role">UI/UX Designer</h2>
-            <ul class="keys-list" id="small-keys-list">
-              <li class="small-key" id="ux">UI/UX</li>
-              <li class="small-key" id="illustrator">Illustrator</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-    </div>
     <div id="adventure-section">
-      <div class="title-wrapper">
-        <h1 class="section-title">Adventures</h1>
-        <img class="section-number" src="./img/3.png" alt="3">
-      </div>
 
 
 
@@ -367,90 +346,6 @@
 
     </div> -->
 
-    <div class="other-projects">
-
-      <div id="stic-proj" class="small-project-card" style="background-image: url(./img/stic-logo.png)" data-micromodal-trigger="stic-modal" >
-        <div class="background-overlay">
-        </div>
-        <div class="small-text-wrapper">
-
-          <div class="small-text">
-            <h2 class="small-title">STIC</h2>
-            <h2 class="small-role">Product Designer</h2>
-            <ul class="keys-list" id="small-keys-list">
-              <li class="small-key" id="product">PRODUCT DESIGN</li>
-              <li class="small-key" id="research">USER RESEARCH</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-
-      <div id="handout-pocket" class="small-project-card" style="background-image: url(./img/handoutpocket-logo.png)" data-micromodal-trigger="handout-modal">
-        <div class="background-overlay">
-        </div>
-        <div class="small-text-wrapper">
-
-          <div class="small-text">
-            <h2 class="small-title">Handout Pocket</h2>
-            <h2 class="small-role">Product Designer</h2>
-            <ul class="keys-list" id="small-keys-list">
-              <li class="small-key" id="product">Product Design</li>
-              <li class="small-key" id="illustrator">Illustrator</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-
-
-      <!-- <div class="small-project-card" id="seabird" style="background-image: url(./img/seabird-logo.png)" data-micromodal-trigger="seabird-modal">
-        <div class="background-overlay">
-        </div>
-        <div class="small-text-wrapper">
-
-          <div class="small-text">
-            <h2 class="small-title">Seabird Apps</h2>
-            <h2 class="small-role">Animation and Marketing</h2>
-            <ul class="keys-list" id="small-keys-list">
-              <li class="small-key" id="illustrator">Illustrator</li>
-              <li class="small-key" id="after-effects">After Effects</li>
-            </ul>
-          </div>
-        </div>
-      </div> -->
-
-      <!-- <div class="small-project-card" style="background-image: url(./img/engs12-icon.png)" data-micromodal-trigger="engs12-modal">
-        <div class="background-overlay">
-        </div>
-        <div class="small-text-wrapper">
-
-          <div class="small-text">
-            <h2 class="small-title">Design Thinking</h2>
-            <h2 class="small-role">Teaching Assistant</h2>
-            <ul class="keys-list" id="small-keys-list">
-              <li class="small-key" id="design-thinking">Design Thinking</li>
-              <li class="small-key" id="prototyping">Prototyping</li>
-              <li class="small-key" id="research">User Research</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="small-project-card" style="background-image: url(./img/maze-icon.jpg)" data-micromodal-trigger="maze-modal">
-        <div class="background-overlay">
-        </div>
-        <div class="small-text-wrapper">
-
-          <div class="small-text">
-            <h2 class="small-title">Maze Solver</h2>
-            <h2 class="small-role">Development Project</h2>
-            <ul class="keys-list" id="small-keys-list">
-              <li class="small-key" id="c">C</li>
-            </ul>
-          </div>
-        </div>
-      </div> -->
-    </div>
   </div>
 
 
@@ -918,86 +813,8 @@
     </div>
   </div> -->
 
-  <div class="modal micromodal-slide" id="making-modal" aria-hidden="true">
-    <div class="modal__overlay" tabindex="-1" data-micromodal-close>
-      <div class="modal__container" role="dialog" aria-modal="true">
-        <header class="modal__header">
-          <div class="modal-title">
-            Making It Stick
-          </div>
-          <div class="modal-role">
-            UI/UX Design
-          </div>
-          <button class="modal__close" data-micromodal-close>
-            <i class="fa fa-times" data-micromodal-close aria-hidden="true"></i>
-          </button>
-        </header>
-        <main class="modal__content">
 
-          <div class="modal-description">
-            Making It Stick is a mobile application that tests financial literacy. The app was meant to be used as
-            an additional resource for adults who are taking classes in personal finance.
-          </div>
-          <div class="modal-description">
-            <a class="modal-small-link" target="_blank" href="https://www.youtube.com/watch?v=TO_X-n_SpPA">See demo video</a>
-          </div>
-
-          <div class="modal-image-container">
-            <img class="modal-image" id="iphone" src="./img/small/mis1-iphone.png" />
-            <img class="modal-image" id="iphone" src="./img/small/mis2-iphone.png" />
-            <img class="modal-image" id="iphone" src="./img/small/mis3-iphone.png" />
-
-
-          </div>
-        </main>
-      </div>
-    </div>
-    </div> -->
-
-  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/micromodal/dist/micromodal.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script src="./js/bootstrap.js"></script>
-  <script type="text/javascript" src="./js/main.js"></script>
-  <script
-    src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
-</div>
-
-  <div class="modal micromodal-slide" id="maze-modal" aria-hidden="true">
-    <div class="modal__overlay" tabindex="-1" data-micromodal-close>
-      <div class="modal__container" role="dialog" aria-modal="true">
-        <header class="modal__header">
-          <div class="modal-title">
-            React Blog
-          </div>
-          <div class="modal-role">
-            Development Project
-          </div>
-          <button class="modal__close" data-micromodal-close>
-            <i class="fa fa-times" data-micromodal-close aria-hidden="true"></i>
-          </button>
-        </header>
-        <main class="modal__content">
-
-          <div class="modal-description">
-            I created a full-stack blog platform using React, Redux, MongoDB, Node.js and Express. The blog supports
-            basic blog functionality, maintains a commenting system, and also requires user authentication.
-          </div>
-          <div class="modal-description">
-            <a class="modal-small-link" target="_blank" href="http://justinluo-redux-blog.surge.sh/">See website</a>
-          </div>
-
-          <div class="modal-image-container">
-            <img class="modal-image" src="./img/small/react-blog.png" />
-          </div>
-        </main>
-      </div>
-    </div>
-  </div> -->
-
+  
   <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/micromodal/dist/micromodal.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
